--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ header .container {
   color: #FFFFFF;
   border: none;
   padding: 10px 30px;
+  width: 180px;
   cursor: pointer;
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
@@ -206,7 +207,7 @@ section.movies .container h6 {
     display: none;
   }
   .btn {
-    margin: 0px !important;
+    margin: 5px 0px !important;
   }
   header .container {
     display: -webkit-box;
